app/assets/stylesheets/partials/_profile.css.scss
#user-pictures {
  padding:20px;
  padding-top:0;
  padding-bottom:0;

  @import 'partials/picture_gallery';

  h2 {
    font-size:1em;
    padding:0;
    color:$link-color;
    font-weight:normal;
  }

}

